@@ -23,15 +23,8 @@ pt-BR:
         last_word_connector: ' e '
 
     active_record:
-      allow_nil: "{{subject_name}} {{not}}permitisse valores nulos para {{attribute}}"
-      allow_blank: "{{subject_name}} {{not}}permitisse valores vazios para {{attribute}}"
       validate_length_of:
         description: "garantir tamanho de {{attributes}}"
-        expectations:
-          less_than_min_length: "{{subject_name}} fosse inválido quando o tamanho de {{attribute}} é menor que {{minimum}} caracteres"
-          exactly_min_length: "{{subject_name}} fosse válido quando o tamanho de {{attribute}} é exatamente {{minimum}} caracteres"
-          more_than_max_length: "{{subject_name}} fosse inválido quando o tamanho de {{attribute}} é maopr que {{maximum}} caracteres"
-          exactly_max_length: "{{subject_name}} fosse válido quando o tamanho de {{attribute}} é exatamente {{maximum}} caracteres"
         optionals:
           within:
             positive: "dentro de {{inspect}} caracteres"
@@ -47,16 +40,9 @@ pt-BR:
           allow_blank:
             positive: "permitindo valores vazios"
             negative: "não permitindo valores vazios"
+
       validate_numericality_of:
         description: "permitir apenas números em {{attributes}}"
-        expectations:
-          only_numeric_values: "{{subject_name}} permitisse apenas números para {{attribute}}"
-          only_integer: "{{subject_name}} {{not}}permitisse apenas números inteiros para {{attribute}}"
-          only_even: "{{subject_name}} permitisse apenas valores pares para {{attribute}}"
-          only_odd: "{{subject_name}} permitisse apenas valores ímpares para {{attribute}}"
-          equals_to: "{{subject_name}} fosse válido apenas quando {{attribute}} é igual a {{count}}"
-          more_than_maximum: "{{subject_name}} fosse inválido quando {{attribute}} é maior que {{count}}"
-          less_than_minimum: "{{subject_name}} fosse inválido quando {{attribute}} é menor que {{count}}"
         optionals:
           only_integer:
             positive: "permitindo apenas valores inteiros"
@@ -80,17 +66,12 @@ pt-BR:
           allow_blank:
             positive: "permitindo valores vazios"
             negative: "não permitindo valores vazios"
+
       validate_presence_of:
         description: "exigir a presença de {{attributes}}"
-        expectations:
-          allow_nil: "{{subject_name}} garantir a presença de {{attribute}}"
+
       validate_uniqueness_of:
         description: "exigir valores únicos para {{attributes}}"
-        expectations:
-          responds_to_scope: "uma instância de {{subject_name}} respondesse {{method}}"
-          is_unique: "{{subject_name}} exigisse valores únicos para {{attribute}}"
-          case_sensitive: "{{subject_name}} {{not}}fosse case sensitive na validação de {{attribute}}"
-          valid_with_new_scope: "{{subject_name}} fosse válido quando o escopo de {{attribute}} ({{method}}) mudasse"
         optionals:
           scope:
             positive: "com escopo em {{inspect}}"
